# Cheetah-Software

./: .gitignore  CMakeLists.txt  README.md  actuator_test.py  config.h.cmake  configure_control_mode.py  prep_for_hardware.sh  pyteapot.py  test_lcm.py  test_lcm_2.py  test_lcm_logger.py
common/: CMakeLists.txt
common/include/: cppTypes.h
common/include/ControlParameters/: ControlParameters.h  SimulatorParameters.h
common/include/Controllers/: ContactEstimator.h  LegController.h
common/include/Dynamics/: MuadQuad.h  Quadruped.h
common/include/SimUtilities/: GamepadCommand.h  RobServBoard.h  SimulatorMessage.h
common/include/Utilities/: SharedMemory.h
common/src/Controllers/: ContactEstimator.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
common/src/SimUtilities/: RobServBoard.cpp
common/src/SparseCMPC/: SparseCMPC.cpp
common/test/: test_casadi.cpp
config/: example_inverse_dynamics_parameters.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml  muadquad-defaults.yaml  simulator-defaults.yaml  torso_pos_controller_parameters.yaml
docker/scripts/: build.sh  dev_into.sh
lcm-types/: leg_control_data_lcmt.lcm  mpc_state_data_lcmt.lcm  robot_server_command_lcmt.lcm  robot_server_response_lcmt  robot_server_response_lcmt.lcm
matlab/: contact_estimator.m  dataviz_sandbox.asv  dataviz_sandbox.m  kinematics_sandbox.asv  kinematics_sandbox.m  mq_telem_viz.m  orientation_estimator.m  orientation_sandbox.m  robotserver_dataviz.asv  robotserver_dataviz.m  test.mat  thermal_bigfan_off.fig  thermal_bigfan_on.fig
matlab/Functions/: contact_estimator.m  fitPlane3.m  foot_jacobian.m  get_mq_data.m  get_orientation_estimate.m  parse_mocap.m  parse_mq_telem_table.m  plane_fit_ols.m  plane_fit_tls.m  plot_3d_cube.m  populate_progress.m
python/: actuator_test.py  configure_control_mode.py  test_lcm_2.py  test_lcm_interface.py  test_lcm_logger.py  test_legs_in_home_position.py
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
robot-server/: CMakeLists.txt  README.md  dynamometer_main.cpp  leg.cpp  leg.h  moteus_controller.h  robot_server.cpp  robot_server.h  robot_server_config.json  robot_server_main.cpp  test_lcm.py
robot-server/dynamometer_ref/: dynamometer.cpp  dynamometer.h
robot-server/include/: actuator.h  color.h  moteus_controller.h  utils.h
robot-server/moteus-configs/: a1.cfg  detune.cfg  g7.5.cfg  g7.5.cfg.save  x1.cfg  x2.cfg  x3.cfg  x3_12.cfg
robot-server/src/: actuator.cpp  moteus_controller.cpp  utils.cpp
robot/include/: HardwareBridge.h  RobotRunner.h
robot/include/rt/: ioctl_wrap.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: ioctl_wrap.cpp  rt_serial.cpp
scripts/: prep_for_hardware.sh  prep_robot_server.sh
scripts/lcm-log2smat/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  lcm-log2smat
sim/: CMakeLists.txt
sim/include/: DrawList.h  GameController.h  Graphics3D.h  Simulation.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp
user/: CMakeLists.txt
user/Gamepad_Controls/: CMakeLists.txt  main.cpp
user/JPos_Controller/: JPos_Controller.cpp  JPos_Controller.hpp  main.cpp
user/MIT_Controller/: CMakeLists.txt
user/MIT_Controller/Controllers/BackFlip/: DataReader.cpp
user/MIT_Controller/Controllers/WBC/WBIC/: WBIC.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/: WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_SitDown.cpp  FSM_State_SitDown.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h  SafetyChecker.cpp
user/MiniCheetahSpi_Controller/: main.cpp
user/TorsoPos_Controller/: CMakeLists.txt  TorsoPosUserParameters.h  TorsoPos_Controller.cpp  TorsoPos_Controller.hpp  main.cpp
